<resources>
    <string name="app_name">ZuriTask49 Contacts</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="number">Number</string>
    <string name="add_contact">Add Contact</string>
    <string name="add">ADD</string>
    <string name="add_contact_button">Add contact button</string>
    <string name="hi_there">Hi there,</string>
    <string name="welcome_back">Welcome back</string>
    <string name="log_in">Log in</string>
    <string name="your_account_to_continue">your account to continue</string>
    <string name="email">Email*</string>
    <string name="required">*Required</string>
    <string name="password">Password*</string>
    <string name="don_t_have_an_account">"Don't have an account? "</string>
    <string name="sign_up">Sign up</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="nice_to_have_you">Nice to have you</string>
    <string name="to_make_use_of_the_app">to make use of the app</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="error">Error</string>
</resources>